--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,38 @@ a,a:hover{
 	transform:translateX(-50%);
 	cursor: pointer;
 }
+
+.header{
+
+	background: rgb(131,211,203);
+	text-shadow: 1px 1px 3px rgba(0,0,0,.5);
+}
+
+.foto-perfil{
+
+	width: 100px;
+}
+
+.logo-mini img{
+
+	padding:10px
+}
+
+.logo-lg img{
+
+	padding:10px 0 ;
+}
+
+.wrapper{
+
+	height: auto;
+	min-height: 100%!important;
+}
+
+.content-wrapper{
+
+	min-height: 100vh;
+}
+
+.saludo{}
+
